Default page template

--- a/templates/footer/footer.html
+++ b/templates/footer/footer.html
@@ -60,14 +60,14 @@
       </section>
       <section class="about-list-footer">
         <h3>Om webbplatsen</h3>
-        <ul>
+        <ul class="page-nav">
           <li><a href="#">Använda webbplatsen</a></li>
           <li><a href="#">Om webbkakor (cookies)</a></li>
           <li><a href="#">Webbkarta</a></li>
           <li><a href="#">Tillgänglighetsredogörelse</a></li>
         </ul>
         <h3>Våra övriga webbplatser</h3>
-        <ul>
+        <ul class="page-nav">
           <li><a href="#">www.yrkeshogskolan.se</a></li>
           <li><a href="#">www.konstkulturutbildning.se</a></li>
           <li><a href="#">www.blitolk.nu</a></li>
