--- a/templates/template.html
+++ b/templates/template.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="headerStyle.css" />
+    <link rel="stylesheet" href="/templates/header/headerStyle.css" />
+    <link rel="stylesheet" href="/templates/footer/footer.css" />
     <script
     src="https://kit.fontawesome.com/061e52cdfe.js"
     crossorigin="anonymous"
@@ -15,8 +16,8 @@
   <body>
     <header class="topHeader">
       <a href="/index/index.html">
-        <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
-        <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png">
+        <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="myh.se">
+        <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png" alt="myh.se">
       </a>
             <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check">
