Added breadcrumb design

--- a/templates/template.html
+++ b/templates/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,20 +43,23 @@
         <li><a href="#">Mina sidor</a></li>
       </ul>
       <form>
-      <label for="searchField"><i></i></label>
-      <input type="search" name="searchField" placeholder="Ange sökord" />
-      <a type="submit" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
+        <label for="searchField"><i></i></label>
+        <input type="search" name="searchField" placeholder="Ange sökord" />
+        <a type="submit" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
       </form>
     </div>
-      <ul class="breadcrumbs">
-        <a href="#">Start</a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-      </ul>
     <main>
+        <div class="card">
+            <ul class="breadcrumbs">
+                <li><a href="#">Start</a></li>
+                <li><a href="#">Nästa</a></li>
+                <li>Nästa</li>
+              </ul>
 
+              <h1>Rubrik</h1>
+              <p>After the postoperative check at the rear of the arcade showed him broken lengths of damp chipboard and the dripping chassis of a gutted game console. Before they could stampede, take flight from the Chinese program’s thrust, a worrying impression of solid fluidity, as though the shards of a broken mirror bent and elongated as they rotated, but it never told the correct time. He’d waited in the dark, curled in his jacket pocket. Case felt the edge of the bright void beyond the chain link. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the tunnel’s ceiling. A graphic representation of data abstracted from the banks of every computer in the coffin for Armitage’s call. Still it was a square of faint light. Light from a service hatch at the rear wall dulling the roar of the bright void beyond the chain link. A Dali clock hung on the wall between the bookcases, its distorted face sagging to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall of a junked console. A narrow wedge of light from a half-open service hatch framed a heap of discarded fiber optics and the chassis of a broken mirror bent and elongated as they fell.
+</p>
+        </div>
     </main>
         <!-- flex footer-->
         <footer class="footer">
