--- a/css/components.css
+++ b/css/components.css
@@ -110,6 +110,26 @@ ul {
   list-style-type: none;
 }
 
+.breadcrumbs {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.breadcrumbs li {
+  float: left;
+}
+
+.breadcrumbs li:not(:last-child)::after {
+  /* https://stackoverflow.com/questions/20782368/use-font-awesome-icon-as-css-content */
+  font-family: "Font Awesome 5 Free";
+  content: "\f054";
+  display: inline-block;
+  margin: 0 5px 0 5px;
+  vertical-align: middle;
+  font-weight: 900;
+}
+
 .page-nav li {
   margin: 20px;
 }
