Removed nav divider on mobile

--- a/templates/header/headerStyle.css
+++ b/templates/header/headerStyle.css
@@ -173,6 +173,9 @@ body {
   .navSticky li {
     margin: 18px;
   }
+  .navSticky .navItem {
+    border: 0;
+  }
   #smalllogo {
     display: none;
   }
