--- a/templates/header/headerStyle.scss
+++ b/templates/header/headerStyle.scss
@@ -150,6 +150,10 @@ body {
     li {
       margin: 18px;
     }
+
+    .navItem {
+      border: 0;
+    }
   }
   #smalllogo {
     display: none;
