--- a/lagarReglerTillsyn/style.css
+++ b/lagarReglerTillsyn/style.css
@@ -9,6 +9,8 @@ main {
   padding: 1em;
   max-height: 450px;
   margin: 1em 1em 1em 1em;
+  max-width: 50%;
+  min-width: 400px;
 }
 
 .link-list h3 {
@@ -34,14 +36,14 @@ main {
   padding: 1em;
 }
 
-.col-2-3.card img {
-  width: 50%;
-  margin: 0 auto;
-}
-
 .img-container {
   text-align: center;
   background-color: yellow;
+}
+
+.img-container img {
+  width: 50%;
+  margin: 0 auto;
 }
 
 .card {
@@ -53,25 +55,15 @@ main {
   min-width: 33vw;
 }
 
-.call-to-action {
-  margin: 1em auto;
-  border: 1px solid #464646;
-  border-radius: 5px;
-  display: block;
-  text-align: center;
-  padding: 0.5em;
-  width: 50%;
-  background-color: green;
-  font-size: 1.5em;
-  color: white;
-}
-
 .icons {
   border: 1px solid #464646;
   border-radius: 5px;
   width: 50%;
-  margin: 0 auto;
+  margin: 1em;
+  padding: 1em;
   font-size: 1.5em;
+  min-width: 400px;
+  display: inline-block;
 }
 
 .icons h4 {
@@ -89,5 +81,19 @@ main {
 
 .icons ul li {
   display: inline-block;
+}
+
+@media only screen and (max-width: 999px) {
+  .link-list {
+    margin: 0 auto;
+    max-width: 70%;
+    min-width: auto;
+  }
+  .icons {
+    width: 70%;
+    display: block;
+    margin: 1em auto;
+    min-width: auto;
+  }
 }
 /*# sourceMappingURL=style.css.map */
