--- a/css/components.scss
+++ b/css/components.scss
@@ -31,9 +31,19 @@ $btn-font-color: #fff;
   }
 }
 
+.img-container {
+    text-align: center;
+    background-color: yellow;
+    img {
+      width: 50%;
+      margin: 0 auto;
+    }
+  }
+
 .card {
   background: #fff;
   padding: 15px;
+  box-shadow: 1px 1px 3px black;
 }
 
 .sidebar,
@@ -43,7 +53,7 @@ $btn-font-color: #fff;
 }
 
 .sidebar {
-  background: #1446a0;
+  background: rgb(70, 70, 70);
 }
 
 .share {
@@ -104,7 +114,7 @@ ul {
     display: inline-block;
     width: 100%;
     margin-bottom: 10px;
-    
+
     li {
         float: left;
     
