--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@ body {
 }
 
 main {
-  margin: 40px;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 85%;
 }
 
 h1,
@@ -56,6 +58,6 @@ h6 {
 
 @media screen and (max-width: 424px) {
   main {
-    margin: 0;
+    width: 95%;
   }
 }
