--- a/css/components.css
+++ b/css/components.css
@@ -1,4 +1,3 @@
-/* Color palette https://coolors.co/1446a0-db3069-f5d547-ebebd3-3c3c3b */
 .button {
   display: inline-block;
   background: #3c3c3b;
@@ -44,30 +43,16 @@
           box-shadow: 1px 1px 3px black;
 }
 
-.sidebar,
-.share {
-  padding: 15px;
-  color: #fff;
-}
-
 .sidebar {
   background: #464646;
-}
-
-.share {
-  background: #db3069;
-  font-weight: bold;
-}
-
-.share .icons-row {
-  font-size: 24px;
-  float: right;
+  padding: 15px;
+  color: #fff;
 }
 
 .post-list li {
   padding: 15px;
   background: #f5d547;
-  color: #fff;
+  color: #000;
   margin-bottom: 15px;
 }
 
@@ -147,7 +132,6 @@ ul {
 }
 
 .page-nav li:before {
-  /* https://stackoverflow.com/questions/20782368/use-font-awesome-icon-as-css-content */
   font-family: "Font Awesome 5 Free";
   content: "\f054";
   display: inline-block;
