--- a/css/components.scss
+++ b/css/components.scss
@@ -1,5 +1,3 @@
-/* Color palette https://coolors.co/1446a0-db3069-f5d547-ebebd3-3c3c3b */
-
 $btn-default: #3c3c3b;
 $btn-primary: #00C84E;
 $btn-font-color: #fff;
@@ -46,30 +44,16 @@ $btn-font-color: #fff;
   box-shadow: 1px 1px 3px black;
 }
 
-.sidebar,
-.share {
-  padding: 15px;
-  color: #fff;
-}
-
 .sidebar {
   background: rgb(70, 70, 70);
-}
-
-.share {
-  background: #db3069;
-  font-weight: bold;
-
-  .icons-row {
-    font-size: 24px;
-    float: right;
-  }
+  padding: 15px;
+  color: #fff;
 }
 
 .post-list li {
   padding: 15px;
   background: #f5d547;
-  color: #fff;
+  color:#000;
   margin-bottom: 15px;
 }
 
@@ -134,7 +118,6 @@ ul {
   margin: 20px;
 
   &:before {
-    /* https://stackoverflow.com/questions/20782368/use-font-awesome-icon-as-css-content */
     font-family: "Font Awesome 5 Free";
     content: "\f054";
     display: inline-block;
@@ -150,10 +133,6 @@ ul {
     }
     text-decoration: none;
     color: #000;
-    // &:hover {
-    //   border-bottom: 1px solid black;
-    //   font-weight: 600;
-    // }
   }
 }
 
