--- a/nyhetsRum/nyhetsRum.css
+++ b/nyhetsRum/nyhetsRum.css
@@ -9,40 +9,31 @@ body {
   background: #ebebd3;
 }
 
-.card {
+/* .card {
   background: white;
   padding: 15px;
   color: black;
   box-shadow: 0px 0px 2px 2px grey;
+} */
+
+.sidebar {
+  width: 50%;
 }
 
 .sidebar {
-  /* height: 100%;  */
-  width: 250px;
-  z-index: 1;
-  /* top: 0;
-  left: 0; */
-  background-color: black;
-  overflow-x: hidden;
-  padding-top: 60px;
-  /* transition: 0.5s; */
-}
-
-.sidebar,
-.share {
-  padding: 10px;
   color: white;
-  box-shadow: 0px 0px 2px 2px grey;
 }
-
-.sidebar {
-  background: black;
-  box-shadow: 0px 0px 2px 2px grey;
-  font-family: HelveticaNeue;
+.sidebar a {
+  text-decoration: none;
+  color: inherit;
+}
+.share i {
+  color: black;
 }
 
 .share {
-  background: black;
+  background: white;
+  color: black;
   box-shadow: 0px 0px 2px 2px grey;
   /* height: 100%; */
   width: 250px;
@@ -50,14 +41,22 @@ body {
 
 .post-list {
   list-style-type: none;
-  padding: 0;
-  box-shadow: 0px 0px 2px 2px grey;
+  /* padding: 0;
+  box-shadow: 0px 0px 2px 2px grey; */
 }
-
 .post-list li {
   padding: 15px;
   background: white;
   color: black;
-  margin-bottom: 15px;
-  box-shadow: 0px 0px 2px 2px grey;
+  margin: 1em 0;
+  /* box-shadow: 0px 0px 2px 2px grey; */
+}
+.post-list a {
+  text-decoration: none;
+  color: black;
+}
+
+.grid.gap {
+  width: 85vw;
+  margin: 0 auto;
 }
