--- a/nyhetsRum/nyhetsRum.css
+++ b/nyhetsRum/nyhetsRum.css
@@ -17,7 +17,8 @@ body {
 } */
 
 .sidebar {
-  width: 50%;
+  max-width: 50%;
+  min-width: 250px;
 }
 
 .sidebar {
@@ -30,13 +31,16 @@ body {
 .share i {
   color: black;
 }
-
+.sidebar h3 {
+  border-bottom: 2px solid black;
+}
 .share {
   background: white;
   color: black;
   box-shadow: 0px 0px 2px 2px grey;
   /* height: 100%; */
   width: 250px;
+  margin: 1em 0;
 }
 
 .post-list {
@@ -53,10 +57,21 @@ body {
 }
 .post-list a {
   text-decoration: none;
-  color: black;
+  color: purple;
 }
 
 .grid.gap {
   width: 85vw;
   margin: 0 auto;
+}
+
+@media only screen and (max-width: 999px) {
+  .sidebar {
+    margin: 1em auto;
+  }
+  .share,
+  .icons {
+    margin: 1em auto;
+    min-width: 200px;
+  }
 }
