--- a/templates/header/headerStyle.css
+++ b/templates/header/headerStyle.css
@@ -92,6 +92,11 @@ body {
   transition: color 0.3s ease-in-out, border-bottom 0.5s ease-in-out;
 }
 
+a.currentPage {
+  color: yellow;
+  border-bottom: 2px solid yellow;
+}
+
 #smalllogo {
   max-height: 70px;
   display: none;
