Added comments and smaller fixes

--- a/css/components.scss
+++ b/css/components.scss
@@ -1,3 +1,5 @@
+/* This file adds sitewide components like buttons, lists and breadcrumbs etc */
+
 $btn-default: #3c3c3b;
 $btn-primary: #00C84E;
 $btn-font-color: #fff;
