--- a/css/components.css
+++ b/css/components.css
@@ -1,3 +1,4 @@
+/* This file adds sitewide components like buttons, lists and breadcrumbs etc */
 .button {
   display: inline-block;
   background: #3c3c3b;
