adds proper paths for navigational links in header template

--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -21,17 +21,17 @@
             <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check">
       <ul class="navSticky">
-        <li class="navItem"><a href="omOss.html">Om oss</a></li>
+        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
         <li class="navItem">
-          <a href="verksamhetsOmraden.html">Verksamhetsområden</a>
+          <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
         </li>
         <li class="navItem">
-          <a href="lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+          <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
         </li>
-        <li class="navItem"><a href="statistik.html">Statistik</a></li>
-        <li class="navItem"><a href="publikationer.html">Publikationer</a></li>
-        <li class="navItem"><a href="nyhetsrum.html">Nyhetsrum</a></li>
-        <li class="navItem"><a href="kontakt.html">Kontakt</a></li>
+        <li class="navItem"><a href="/statistik/statistik.html">Statistik</a></li>
+        <li class="navItem"><a href="/publikationer/publikationer.html">Publikationer</a></li>
+        <li class="navItem"><a href="/nyhetsRum/nyhetsRum.css">Nyhetsrum</a></li>
+        <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
       </ul>
     </header>
     <div role="banner" id="banner">
