--- a/index/style.css
+++ b/index/style.css
@@ -4,8 +4,28 @@ html {
 }
 
 main {
+  z-index: 1;
+  position: relative;
   max-width: 100vw;
   margin: 0 auto;
+}
+
+video {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.paral-vid {
+  z-index: -2000;
+  top: 110px;
+  left: 0vw;
+  width: 100vw;
+  position: fixed;
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
 }
 
 article {
@@ -65,6 +85,12 @@ article h4 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 3;
   grid-area: links;
+}
+
+.hidden {
+  opacity: 0.4;
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
 }
 
 .otherlinks {
