--- a/index/style.scss
+++ b/index/style.scss
@@ -3,10 +3,26 @@ html {
   max-width: 100vw;
 }
 main {
+  z-index: 1;
+  position: relative;
   max-width: 100vw;
   margin: 0 auto;
 }
-
+video {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+.paral-vid {
+  z-index: -2000;
+  top: 110px;
+  left: 0vw;
+  // height: 750px;
+  width: 100vw;
+  position: fixed;
+  opacity: 1;
+  transition: opacity 0.2s ease;
+}
 article {
   display: flex;
   flex-direction: column;
@@ -41,7 +57,10 @@ article {
   justify-content: center;
   grid-area: links;
 }
-
+.hidden {
+  opacity: 0.4;
+  transition: opacity 0.2s ease;
+}
 .otherlinks {
   grid-column-start: 1;
   grid-column-end: 4;
