--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -1,62 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="headerStyle.css" />
-    <script
-    src="https://kit.fontawesome.com/061e52cdfe.js"
-    crossorigin="anonymous"
-  ></script>
-    <title>Document</title>
-  </head>
 
-  <body>
-    <header class="topHeader">
-      <a href="/index/index.html">
-        <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
-        <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png">
-      </a>
-            <label for="ham-check" id="hamburger">&#9776</label>
-      <input type="checkbox" name="ham-check" id="ham-check">
-      <ul class="navSticky">
-        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
-        <li class="navItem">
-          <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
-        </li>
-        <li class="navItem">
-          <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
-        </li>
-        <li class="navItem"><a href="/statistik/statistik.html">Statistik</a></li>
-        <li class="navItem"><a href="/publikationer/publikationer.html">Publikationer</a></li>
-        <li class="navItem"><a href="/nyhetsRum/nyhetsRum.css">Nyhetsrum</a></li>
-        <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
-      </ul>
-    </header>
-    <div role="banner" id="banner">
-      <ul>
-        <li><a href="#">In English</a></li>
-        <li><a href="#">Lättläst</a></li>
-        <li><a href="#">Anpassa</a></li>
-        <li><a href="#">Mina sidor</a></li>
-      </ul>
-      <form>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="headerStyle.css" />
+  <script src="https://kit.fontawesome.com/061e52cdfe.js" crossorigin="anonymous"></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <header class="topHeader">
+    <a href="/index/index.html">
+      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
+      <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png">
+    </a>
+    <label for="ham-check" id="hamburger">&#9776</label>
+    <input type="checkbox" name="ham-check" id="ham-check">
+    <ul class="navSticky">
+      <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
+      <li class="navItem">
+        <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
+      </li>
+      <li class="navItem">
+        <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+      </li>
+      <li class="navItem"><a href="/statistik/statistik.html">Statistik</a></li>
+      <li class="navItem"><a href="/publikationer/publikationer.html">Publikationer</a></li>
+      <li class="navItem"><a href="/nyhetsRum/nyhetsRum.css">Nyhetsrum</a></li>
+      <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
+    </ul>
+  </header>
+  <div role="banner" id="banner">
+    <ul>
+      <li><a href="#">In English</a></li>
+      <li><a href="#">Lättläst</a></li>
+      <li><a href="#">Anpassa</a></li>
+      <li><a href="#">Mina sidor</a></li>
+    </ul>
+    <form>
       <label for="searchField"><i></i></label>
       <input type="search" name="searchField" placeholder="Ange sökord" />
       <a type="submit" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
-      </form>
-    </div>
-    <div id="breadcrumbs">
-      <p>
-        <a href="#">Start</a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-      </p>
-    </div>
+    </form>
+  </div>
+  <div id="breadcrumbs">
+    <p>
+      <a href="#">Start</a>
+      <a href="#">Nästa </a>
+      <a href="#">Nästa </a>
+      <a href="#">Nästa </a>
+      <a href="#">Nästa </a>
+    </p>
+  </div>
 
-    <!-- <div class="bigbody">big body bes</div> -->
-  </body>
+  <!-- <div class="bigbody">big body bes</div> -->
+</body>
+
 </html>
