--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="topHeader">
-    <a href="/index/index.html">
+    <a href="/index/index.html" aria-label="Till startsidan">
       <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="myh.se" />
       <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png" alt="myh.se" />
     </a>
@@ -55,7 +55,7 @@
       </ul>
     </nav>
     <form>
-      <label for="searchField"><i></i></label>
+      <label for="searchField"><span>Sök</span></label>
       <input type="search" id="searchField" placeholder="Ange sökord" />
       <a href="#" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
     </form>
