--- a/templates/header/headerStyle.css
+++ b/templates/header/headerStyle.css
@@ -158,6 +158,15 @@ a.currentPage {
 }
 
 @media only screen and (max-width: 1072px) {
+  [aria-label="Huvudmeny"] {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
   .navSticky {
     display: none;
     color: black;
