--- a/templates/template.html
+++ b/templates/template.html
@@ -70,12 +70,7 @@
       </nav>
       <form>
         <label for="searchField"><i></i></label>
-        <input
-          type="search"
-          type="search"
-          aria-label="Sök på webbplatsen"
-          value="Sök"
-        />
+        <input type="search" aria-label="Sök på webbplatsen" value="Sök" />
         <a href="#" aria-label="Sök på webbplatsen" class="button"
           ><i class="fas fa-search"></i> Sök</a
         >
