--- a/lagarReglerTillsyn/style.css
+++ b/lagarReglerTillsyn/style.css
@@ -59,7 +59,7 @@ main {
   border: 1px solid #464646;
   border-radius: 5px;
   width: 50%;
-  margin: 1em;
+  margin: 1em 0 1em 0.5em;
   padding: 1em;
   font-size: 1.5em;
   min-width: 400px;
