--- a/lagarReglerTillsyn/style.scss
+++ b/lagarReglerTillsyn/style.scss
@@ -62,7 +62,7 @@ main {
   border: 1px solid rgb(70, 70, 70);
   border-radius: 5px;
   width: 50%;
-  margin: 1em;
+  margin: 1em 0 1em 0.5em;
   padding: 1em;
   font-size: 1.5em;
   min-width: 400px;
