--- a/nyhetsRum/nyhetsRum.css
+++ b/nyhetsRum/nyhetsRum.css
@@ -16,10 +16,10 @@ body {
   box-shadow: 0px 0px 2px 2px grey;
 } */
 
-.sidebar {
+/*.sidebar {
   max-width: 50%;
   min-width: 250px;
-}
+} */
 iframe {
   max-width: 100%;
   display: block;
@@ -56,21 +56,15 @@ iframe {
   /* padding: 0;
   box-shadow: 0px 0px 2px 2px grey; */
 }
-.post-list li {
+/*.post-list li {
   padding: 15px;
   background: white;
   color: black;
-  margin: 1em 0;
+  margin: 1em 0; 
   /* box-shadow: 0px 0px 2px 2px grey; */
-}
+ 
 .post-list a {
-  text-decoration: none;
-  color: purple;
-}
-
-.grid.gap {
-  width: 85vw;
-  margin: 0 auto;
+  color: black;
 }
 
 @media only screen and (max-width: 999px) {
